# aoc-2023

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
aoc_core/: Cargo.toml
aoc_core/src/: lib.rs  macros.rs
day1/: Cargo.toml
day1/src/: lib.rs  part1.rs  part2.rs
day10/: Cargo.toml
day10/src/: lib.rs  part1.rs  part2.rs  utils.rs
day2/: Cargo.toml
day2/src/: lib.rs  part1.rs  part2.rs  utils.rs
day3/: Cargo.toml
day3/src/: lib.rs  parsing.rs  part1.rs  part2.rs  utils.rs
day4/: Cargo.toml
day4/src/: lib.rs  part1.rs  part2.rs  utils.rs
day5/: Cargo.toml
day5/src/: lib.rs  part1.rs  part2.rs  utils.rs
day5/src/utils/: interval_tree.rs  iterative.rs
day6/: Cargo.toml
day6/src/: lib.rs  part1.rs  part2.rs  utils.rs
day7/: Cargo.toml
day7/src/: lib.rs  part1.rs  part2.rs  utils.rs
day8/: Cargo.toml
day8/src/: lib.rs  part1.rs  part2.rs  utils.rs
day9/: Cargo.toml
day9/src/: lib.rs  part1.rs  part2.rs  utils.rs
src/: main.rs
template/: Cargo.toml  cargo-generate.toml
template/src/: lib.rs  part1.rs  part2.rs
