[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
description = "{{description}}"
authors = ["{{authors}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc_core = { path = "../aoc_core" }
serde = { version = "1.0.193", features = ["derive"] }
